--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,3 +7,8 @@
 
   gtag('config', 'G-PRRMV6XZEK');
 </script>
+
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ff95914439254419992b9e87e2e54efb"}'></script>
+<!-- End Cloudflare Web Analytics -->
