--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,11 +1,11 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PRRMV6XZEK"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TZQEE6FJ72"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-PRRMV6XZEK');
+  gtag('config', 'G-TZQEE6FJ72');
 </script>
 
 
