--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -12,3 +12,7 @@
 <!-- Cloudflare Web Analytics -->
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ff95914439254419992b9e87e2e54efb"}'></script>
 <!-- End Cloudflare Web Analytics -->
+
+<!-- Ads Google -->
+<script data-ad-client="ca-pub-6451847824131764" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- End Ads Google -->
