--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,6 +10,8 @@ layout: default
       </div>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
+	  <div class="site-tags">
+	  </div>
     </div>
   </header> <!-- End Header -->
   <footer>
@@ -35,6 +37,11 @@ layout: default
           <li class="linkedin"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         {% else %}
           <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        {% endif %}
+		{% if site.social-slack %}
+          <li class="email"><a href="https://{{site.social-slack}}.slack.com/"><i class="fa fa-slack"></i></a></li>
+        {% else %}
+          <li class="email"><a href="https://slack.com/"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
         {% endif %}
         {% if site.social-email %}
           <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
