--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: default
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
-      <div class="author-name">{{site.author}}</div>
+      <div class="author-name">{{site.author}}<h1></h1></div>
       <p>{{site.about-author}}</p>
 	  <div class="site-tags">
 	  </div>
