--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -33,16 +33,17 @@ layout: default
         {% else %}
           <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
         {% endif %}
-		{% if site.social-slack %}
-          <li class="email"><a href="https://{{site.social-slack}}.slack.com/"><i class="fa fa-slack"></i></a></li>
+		    {% if site.social-slack %}
+          <li class="slack"><a href="https://{{site.social-slack}}.slack.com/"><i class="fa fa-slack"></i></a></li>
         {% else %}
-          <li class="email"><a href="https://slack.com/"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
+          <li class="slack"><a href="https://slack.com/"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
         {% endif %}
         {% if site.social-email %}
           <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
         {% else %}
           <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
         {% endif %}
+          <li class="trello"><a href="https://trello.com/b/X4DZTogH/blog"><i class="fa fa-trello"></i></a></li>
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
