Adsense en posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,16 @@
 ---
 layout: main
 ---
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6451847824131764"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-6451847824131764"
+     data-ad-slot="1930988132"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <article class="article-page">
   <div class="page-content">
     <div class="wrap-content">
