--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,16 +1,11 @@
-<!--Google Adsense-->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6451847824131764"
-     crossorigin="anonymous"></script>
-     
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6451847824131764"
-     crossorigin="anonymous"></script>
 <!-- Anuncios -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6451847824131764"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-6451847824131764"
-     data-ad-slot="2691753079"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1930988132"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
