Evitar bloqueo de umami

--- a/_includes/analytics/umami.html
+++ b/_includes/analytics/umami.html
@@ -1,6 +1,8 @@
 <!-- Umami -->
 <script
   defer
-  src="{{ site.analytics.umami.domain }}/script.js"
+  src="https://umami-proxy.samuel-hernandez.workers.dev/"
+  data-host-url="{{ url }}"
   data-website-id="{{ site.analytics.umami.id }}"
 ></script>
+
