Volver a cambiar lo de umami

--- a/_includes/analytics/umami.html
+++ b/_includes/analytics/umami.html
@@ -1,8 +1,8 @@
 <!-- Umami -->
 <script
   defer
-  src="https://umami-proxy.samuel-hernandez.workers.dev/"
-  data-host-url="{{ url }}"
+  src="https://www.samurantech.com/umami.js"
+  data-host-url="https://www.samurantech.com"
   data-website-id="{{ site.analytics.umami.id }}"
 ></script>
 
