Cambiar ruta script proxy

--- a/_includes/analytics/umami.html
+++ b/_includes/analytics/umami.html
@@ -1,7 +1,7 @@
 <!-- Umami -->
 <script
   defer
-  src="https://www.samurantech.com/umami.js"
+  src="https://www.samurantech.com/proxy-data.js"
   data-host-url="https://www.samurantech.com"
   data-website-id="{{ site.analytics.umami.id }}"
 ></script>
