Añadir condicional para que si es dev no haga tracking

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -108,6 +108,7 @@
 
   {% include js-selector.html lang=lang %}
 
+  {% if jekyll.environment != 'dev' %}
     <!-- PWA -->
     {% if site.pwa.enabled %}
       <script
@@ -124,6 +125,7 @@
         {% include analytics/{{ platform }}.html %}
       {% endif %}
     {% endfor %}
+  {% endif %}
 
   {% include metadata-hook.html %}
 </head>
