--- a/_includes/analytics/google.html
+++ b/_includes/analytics/google.html
@@ -1,5 +1,5 @@
 <!-- Global site tag (gtag.js) - Google Analytics via Cloudflare Worker -->
-<script defer src="https://www.samurantech.com/ga/gtag/js?id={{ site.analytics.google.id }}"></script>
+<script defer src="/ga/gtag/js?id={{ site.analytics.google.id }}"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     window.dataLayer = window.dataLayer || [];
